# icsgen

./: .gitignore  README.md  pyproject.toml
src/icsgen/: __init__.py  __main__.py  cli.py  config.py  ics_builder.py  prompts.py
src/icsgen/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py  openrouter.py
tests/: test_smoke.py
