[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "icsgen"
version = "0.1.0"
description = "Generate ICS calendar files from natural-language prompts using Claude, ChatGPT, Gemini, or OpenRouter."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Eric Earl" },
    { name = "Claude Opus 4.7" },
]
keywords = ["ics", "calendar", "llm", "claude", "openai", "chatgpt", "gemini", "openrouter", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "ics>=0.7.2",
    "python-dateutil>=2.8",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.0",
]

[project.scripts]
icsgen = "icsgen.cli:main"

[project.urls]
Homepage = "https://github.com/ericearl/icsgen"
Issues = "https://github.com/ericearl/icsgen/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/icsgen"]

[tool.hatch.build.targets.sdist]
include = [
    "src/icsgen",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.uv]
# This repo lives in a OneDrive-synced folder, which doesn't support hardlinks.
# Force copy mode so `uv sync` doesn't fail with os error 396 / locked files.
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
